public/styles/mobile.css
html {
	overflow-y: scroll;
	-webkit-overflow-scrolling: touch;
}

body {
	overflow-x:hidden;
	overflow-y:hidden;
}

img,svg {
	max-width: 100%;
}

#header {
	width:100%;
}

#stage,
#mobile-stage {
	width: 100%;
}

#sidebar {
	margin: 0 auto;
	display:block;
}

.floatleft {
	float: none;
}

.floatright {
	float: none;
}

